autograd unit tensor

--- a/autograd/Untitled.ipynb
+++ b/autograd/Untitled.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 226,
    "id": "e60995ba-64fa-4c3b-946c-c3115470a73a",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
     "            dot and scalar product\n",
     "        \"\"\"\n",
     "        if isinstance(other, (int, float)):\n",
-    "            other = Tensor([other], dtype=s)\n",
+    "            other = Tensor([other])\n",
     "            y = Tensor(other.data*self.data, (self,other))\n",
     "        else:\n",
     "            if self.data.shape != other.data.shape:\n",
@@ -168,11 +168,18 @@
     "                self.grad += other * y.grad\n",
     "                return\n",
     "\n",
+    "\n",
+    "            if other.data.shape == (1, ):\n",
+    "                self.grad += other.data * y.grad\n",
+    "                return\n",
+    "\n",
     "            if self.data.shape == other.data.shape:\n",
     "                self.grad += other.data * y.grad # works for two dimensional but fails for the rest\n",
     "                other.grad += self.data * y.grad\n",
     "            else:\n",
-    "                raise NotImplementedError # understanding how matrix multiplcation works\n",
+    "                raise ValueError(f\"Shapes are different self:{self.data.shape} other:{other.data.shape}\")\n",
+    "\n",
+    "                # raise NotImplementedError # understanding how matrix multiplcation works\n",
     "\n",
     "            return\n",
     "        y._backward = _backward\n",
@@ -269,7 +276,6 @@
     "        return f\"Tensor<{data.tolist()}, {grad=}>\" if self.grad>0 else f\"Tensor<{data.tolist()}>\"\n",
     "\n",
     "\n",
-    "# ---------------------------------- Activation functions --------------------------------\n",
     "def exp(x:Tensor):\n",
     "    y = np.exp(x.data)\n",
     "    y = Tensor(y, (x,))\n",
@@ -293,6 +299,8 @@
     "    y._backward = _backward\n",
     "    return y\n",
     "\n",
+    "# ---------------------------------- Activation functions --------------------------------\n",
+    "\n",
     "def relu(x:Tensor):\n",
     "    y = np.maximum(x.data, 0)\n",
     "    y = Tensor(y, (x,))\n",
@@ -305,11 +313,11 @@
     "    return y\n",
     "\n",
     "\n",
-    "# check if both implementation are equal\n",
-    "def sigmoid(x:Tensor):\n",
+    "# checking if both implementation are equal\n",
+    "def sigmoid_2(x:Tensor):\n",
     "    return (Tensor([1])+exp(-x)) ** -1\n",
     "\n",
-    "def sigmoid_2(x:Tensor):\n",
+    "def sigmoid(x:Tensor):\n",
     "    y = 1/(1+np.exp(-x.data))\n",
     "    y = Tensor(y, (x,))\n",
     "\n",
@@ -321,10 +329,10 @@
     "    y._backward = _backward\n",
     "    return y\n",
     "\n",
-    "def tanh(x:Tensor):\n",
+    "def tanh_2(x:Tensor): # this implementation through seems attractive leads to overflow error\n",
     "    return (exp(x) - exp(-x))/(exp(x) + exp(-x))\n",
     "\n",
-    "def tanh_2(x:Tensor):\n",
+    "def tanh(x:Tensor):\n",
     "    y = np.tanh(x.data)\n",
     "    y = Tensor(y, (x,))\n",
     "\n",
@@ -334,26 +342,34 @@
     "        return\n",
     "\n",
     "    y._backward = _backward\n",
+    "    return y\n",
+    "\n",
+    "def sum_(x:Tensor, axis=None): # sums all elements\n",
+    "    if axis:\n",
+    "        raise NotImplementedError\n",
+    "    y = x.data.sum()\n",
+    "    y = np.array(y)\n",
+    "    y = Tensor(y, (x,))\n",
+    "    \n",
+    "    def _backward():\n",
+    "        x.grad += np.ones_like(x) * y.grad\n",
+    "        return\n",
+    "\n",
+    "    y._backward = _backward\n",
     "    return y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 227,
    "id": "1b729ad9-8596-4866-ac86-7c41c64ffe60",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Tensor.__init__() got an unexpected keyword argument 'dtype'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[57], line 13\u001b[0m\n\u001b[1;32m     11\u001b[0m g \u001b[38;5;241m=\u001b[39m e \u001b[38;5;241m/\u001b[39m f\n\u001b[1;32m     12\u001b[0m h \u001b[38;5;241m=\u001b[39m g \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m \u001b[38;5;241m2\u001b[39m\n\u001b[0;32m---> 13\u001b[0m i  \u001b[38;5;241m=\u001b[39m \u001b[38;5;241;43m-\u001b[39;49m\u001b[43mh\u001b[49m\n\u001b[1;32m     14\u001b[0m j \u001b[38;5;241m=\u001b[39m Tensor([\u001b[38;5;241m0.9\u001b[39m])\n\u001b[1;32m     15\u001b[0m k \u001b[38;5;241m=\u001b[39m j\u001b[38;5;241m-\u001b[39mi\n",
-      "Cell \u001b[0;32mIn[56], line 131\u001b[0m, in \u001b[0;36mTensor.__neg__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    130\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__neg__\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m--> 131\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\n",
-      "Cell \u001b[0;32mIn[56], line 48\u001b[0m, in \u001b[0;36mTensor.__mul__\u001b[0;34m(self, other)\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     45\u001b[0m \u001b[38;5;124;03m    dot and scalar product\u001b[39;00m\n\u001b[1;32m     46\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     47\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(other, (\u001b[38;5;28mint\u001b[39m, \u001b[38;5;28mfloat\u001b[39m)):\n\u001b[0;32m---> 48\u001b[0m     other \u001b[38;5;241m=\u001b[39m \u001b[43mTensor\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43mother\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     49\u001b[0m     y \u001b[38;5;241m=\u001b[39m Tensor(other\u001b[38;5;241m.\u001b[39mdata\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata, (\u001b[38;5;28mself\u001b[39m,other))\n\u001b[1;32m     50\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[0;31mTypeError\u001b[0m: Tensor.__init__() got an unexpected keyword argument 'dtype'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([1.]), array([1.]), array([0.78643562]), array([-7.76674749e-18]), array([-1.74751819e-09]), array([-7.76674749e-18]), array([-7.76674749e-18]), array([7.76674749e-18]), array([-7.76674749e-18]), array([-2.33002425e-13]), array([0.]), array([-2.33002425e-12]), array([0.]), array([-1.16501212e-11]), array([-1.16501212e-11]), array([-1.16501212e-11])]\n"
      ]
     }
    ],
@@ -375,20 +391,21 @@
     "k = j-i\n",
     "l = log(k)\n",
     "m = exp(l)\n",
-    "n = sigmoid(m)\n",
-    "# issues with sigmoid\n",
-    "# working; +, *, /, **, \n",
-    "# c.children\n",
-    "i.zero_grad()\n",
-    "params = [n, m,l,k,j,i,h,g,f,e,d,c,b,a]\n",
-    "i.backward()\n",
+    "n = sigmoid(m ** -0.5)\n",
+    "o = tanh(n)\n",
+    "p = relu(o)\n",
+    "\n",
+    "params = [p, o,n, m,l,k,j,i, h,g,f,e,d,c,b,a]\n",
+    "p.zero_grad()\n",
+    "p.backward()\n",
     "print([i.grad for i in params])\n",
+    "autograd_grads = [i.grad for i in params]\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 228,
    "id": "5236458c-1263-4053-85f4-5afb8228b2cd",
    "metadata": {},
    "outputs": [
@@ -396,7 +413,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[None, None, None, None, None, None, tensor([1.]), tensor([30000.]), tensor([-4.5000e+09]), tensor([300000.]), tensor([90000000.]), tensor([1500000.]), tensor([1500000.]), tensor([1500000.])]\n"
+      "[tensor([1.]), tensor([1.]), tensor([0.7864]), tensor([-2.9127e-14]), tensor([-6.5536e-06]), tensor([-2.9127e-14]), tensor([-2.9127e-14]), tensor([2.9127e-14]), tensor([-2.9127e-14]), tensor([-8.7382e-10]), tensor([0.0001]), tensor([-8.7382e-09]), tensor([-2.6215e-06]), tensor([-4.3691e-08]), tensor([-4.3691e-08]), tensor([-4.3691e-08])]\n",
+      "[0.00013107]\n"
      ]
     }
    ],
@@ -416,13 +434,147 @@
     "k = j-i\n",
     "l = torch.log(k)\n",
     "m = torch.exp(l)\n",
-    "n = torch.sigmoid(m)\n",
-    "params = [n, m,l,k,j,i, h,g,f,e,d,c,b,a]\n",
+    "n = torch.sigmoid(m ** -0.5)\n",
+    "o = torch.tanh(n)\n",
+    "p = torch.relu(o)\n",
+    "params = [p, o,n, m,l,k,j,i, h,g,f,e,d,c,b,a]\n",
     "\n",
     "for i in params:\n",
     "    i.retain_grad()\n",
-    "h.backward()\n",
-    "print([i.grad for i in params])"
+    "p.backward()\n",
+    "print([i.grad for i in params])\n",
+    "torch_grads = [i.grad.numpy() for i in params]\n",
+    "\n",
+    "for t, a in zip(torch_grads,autograd_grads):\n",
+    "    if np.abs((t - a)) > 1e-5:\n",
+    "        print(t-a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "id": "678c5224-22ec-4409-a6cd-486a816784e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# no broadcasting here\n",
+    "import numpy as np\n",
+    "a = Tensor(np.ones((3,3)))\n",
+    "\n",
+    "b = Tensor(np.ones((3,3)))\n",
+    "\n",
+    "c = a + b\n",
+    "d = Tensor(np.ones((3,3)))\n",
+    "\n",
+    "e = c * d\n",
+    "f = Tensor(np.ones((3,3)))\n",
+    "g = e / f\n",
+    "h = g ** 2\n",
+    "i  = -h\n",
+    "j = Tensor(np.ones((3,3)))\n",
+    "# k = j-i\n",
+    "# l = log(k)\n",
+    "# m = exp(l)\n",
+    "# n = sigmoid(m ** -0.5)\n",
+    "# o = tanh(n)\n",
+    "# p = relu(o)\n",
+    "q = sum_(j)\n",
+    "\n",
+    "params = [\n",
+    "    q, \n",
+    "    #p, o,n,m,l,k,\n",
+    "    j,i, h,g,f,e,d,c, b,a]\n",
+    "params[0].zero_grad()\n",
+    "params[0].backward()\n",
+    "autograd_grads = [i.grad for i in params]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "id": "c7715c3f-5ed0-44ed-8965-54632d92eb39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0., dtype=torch.float64)\n",
+      "tensor([[0., 0., 0.],\n",
+      "        [0., 0., 0.],\n",
+      "        [0., 0., 0.]], dtype=torch.float64)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "([tensor(1.),\n",
+       "  tensor([[1., 1., 1.],\n",
+       "          [1., 1., 1.],\n",
+       "          [1., 1., 1.]]),\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None],\n",
+       " 11)"
+      ]
+     },
+     "execution_count": 232,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#------------------------ Torch -----------------------------\n",
+    "import torch\n",
+    "\n",
+    "a = torch.ones(3,3, requires_grad = True)\n",
+    "b = torch.ones(3,3, requires_grad = True)\n",
+    "\n",
+    "\n",
+    "c = a + b\n",
+    "d = torch.ones(3,3, requires_grad = True)\n",
+    "\n",
+    "e = c + d\n",
+    "f = torch.ones(3,3, requires_grad = True)\n",
+    "\n",
+    "g = e / f\n",
+    "h = g ** 2\n",
+    "i  = -h\n",
+    "j = torch.ones(3,3, requires_grad = True)\n",
+    "\n",
+    "# k = j-i\n",
+    "# l = torch.log(k)\n",
+    "# m = torch.exp(l)\n",
+    "# n = torch.sigmoid(m ** -0.5)\n",
+    "# o = torch.tanh(n)\n",
+    "# p = torch.relu(o)\n",
+    "q = torch.sum(j)\n",
+    "\n",
+    "params = [\n",
+    "    # q, p, o,n,m,l,k,j,\n",
+    "    q, j,i, h,g,f,e,d,c, b,a]\n",
+    "\n",
+    "params[0].grad = None\n",
+    "for i in params:\n",
+    "    i.retain_grad()\n",
+    "\n",
+    "params[0].backward()\n",
+    "torch_grads = [i.grad for i in params]\n",
+    "\n",
+    "for t, a in zip(torch_grads,autograd_grads):\n",
+    "\n",
+    "    # if t is None: # resolve this\n",
+    "    #     print(\"- \", a)\n",
+    "    #     continue\n",
+    "    if t is not None:\n",
+    "        print(t-a)\n",
+    "torch_grads, len(autograd_grads)"
    ]
   }
  ],
