unset changes, transformers, cnn, and poetry

--- a/makemore/3_bn.ipynb
+++ b/makemore/3_bn.ipynb
@@ -61,7 +61,7 @@
    ],
    "source": [
     "import random\n",
-    "with open(\"names.txt\", \"r+\") as f:\n",
+    "with open(\"assets/names.txt\", \"r+\") as f:\n",
     "\twords = f.read().splitlines()\n",
     "\twords = [word.strip() for word in words] # get rid of any trailing spaces\n",
     "\twords = [w for w in words if w] # get rid of any empty strings\n",
