--- a/makemore/rnn.ipynb
+++ b/makemore/rnn.ipynb
@@ -36,6 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
+   "id": "81cd0f93",
    "metadata": {},
    "outputs": [
     {
@@ -51,12 +52,12 @@
    ],
    "source": [
     "import random\n",
-    "with open(\"names.txt\", \"r+\") as f:\n",
+    "with open(\"assets/names.txt\", \"r+\") as f:\n",
     "\twords = f.read().splitlines()\n",
     "\twords = [word.strip() for word in words] # get rid of any trailing spaces\n",
     "\tnames = [w for w in words if w] # get rid of any empty strings\n",
     "\t\n",
-    "with open(\"names.txt\", \"w\") as f: \n",
+    "with open(\"assets/names.txt\", \"w\") as f: \n",
     "\tjoined = \"\\n\".join(names)\n",
     "\tf.write(joined)\n",
     "min_chars = 1\n",
@@ -292,7 +293,7 @@
     "import numpy as np\n",
     "\n",
     "# data I/O\n",
-    "data = open('names.txt', 'r').read() # should be simple plain text file\n",
+    "data = open('assets/names.txt', 'r').read() # should be simple plain text file\n",
     "chars = list(set(data))\n",
     "data_size, vocab_size = len(data), len(chars)\n",
     "print('data has %d characters, %d unique.' % (data_size, vocab_size))\n",
