--- a/makemore/rnn.ipynb
+++ b/makemore/rnn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "id": "3f178b8f-f2e1-45cf-837d-dc69c47076f6",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "'2.1.1+cu121'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25,7 +25,8 @@
     "# hyper parameters\n",
     "LR = 0.01\n",
     "n_embd = 100 # size of hidden layer\n",
-    "block_size = 20 # context length\n",
+    "n_embd2 = 50 # size of hidden layer\n",
+    "block_size = 8 # context length\n",
     "\n",
     "%matplotlib inline\n",
     "g = torch.Generator().manual_seed(2147483647) # for reproducibility\n",
@@ -35,14 +36,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
+   "id": "b3419759",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "names:  ['pascual', 'santana', 'paraskevi', 'shane', 'aidan']\n",
+      "names:  ['nain', 'augustine', 'lanay', 'kalany', 'marijose']\n",
       "number of names:  32033\n",
       "(list of chars, count):  ('.abcdefghijklmnopqrstuvwxyz', 27)\n",
       "(max word length, min word length):  (15, 1)\n"
@@ -80,66 +82,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
+   "id": "48ed1982-8f67-45ad-b3c6-8bf6a0860571",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model parameters\n",
-    "W1 = torch.randn(n_embd, vocab_size) # input to hidden\n",
-    "W2 = torch.randn(n_embd, n_embd) # hidden to hidden \n",
-    "W3 = torch.randn(vocab_size, n_embd) # hidden to output\n",
-    "b1 = torch.zeros((n_embd, 1)) # bias for hidden layer\n",
-    "b2 = torch.zeros((vocab_size, 1)) # bias for output layer\n",
+    "class Embedding:\n",
+    "    def __init__(self, num_embeddings, embedding_dim):\n",
+    "        self.weight = torch.randn((num_embeddings, embedding_dim))\n",
+    "    def __call__(self, x):\n",
+    "        return self.weight[x]\n",
     "\n",
-    "# params = [W1, b1, W2, b2]\n",
-    "# for p in params:\n",
-    "# \tp.requires_grad = True\n",
+    "    def parameters(self):\n",
+    "        return [self.weight]\n",
     "\n",
-    "# structure of the model\n",
-    "# x -> embedding -> hidden layer -> tanh -> output -> softmax -> y\n"
+    "class Linear:\n",
+    "    def __init__(self, in_features, out_features, bias=True, dtype=None):\n",
+    "        self.gain = torch.randn(\n",
+    "            (in_features, out_features), dtype=dtype)\n",
+    "        self.bias = torch.randn(\n",
+    "            out_features, dtype=dtype) if bias else None\n",
+    "\n",
+    "    def __call__(self, input: torch.Tensor):\n",
+    "        out = input @ self.gain\n",
+    "        if self.bias is not None:\n",
+    "            out += self.bias\n",
+    "        return out\n",
+    "\n",
+    "    def parameters(self):\n",
+    "        return [self.gain] + ([] if self.bias is None else [self.bias])\n",
+    "\n",
+    "class Tanh:\n",
+    "    def __call__(self, x):\n",
+    "        self.out = torch.tanh(x)\n",
+    "        return self.out\n",
+    "\n",
+    "    def parameters(self):\n",
+    "        return []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 35,
+   "id": "78c25514",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def loss(x, y, hprev):\n",
-    "\t\"\"\"\n",
-    "\tx -> input\n",
-    "\ty -> target\n",
-    "\thprev -> hidden state from previous time step\n",
-    "\t\"\"\"\n",
-    "\txs, hs, ys, ps = {}, {}, {}\n",
-    "\ths[-1] = hprev.copy()\n",
-    "\tloss = 0\n",
-    "\tfor i in range(len(x)):\n",
-    "\t\txs[i] = torch.zeros((vocab_size, 1))\n",
-    "\t\tx[i][x[t]] = 1\n",
-    "\t\ths[i] = torch.tanh(torch.dot(W1, xs[i]) + torch.dot(W2, hs[i-1]) + b1)\n",
-    "\t\tys[i] = F.softmax(torch.dot(W3, hs[i]) + b2, dim=0)\n",
+    "# model parameters\n",
+    "C = torch.randn(vocab_size, n_embd)\n",
+    "Wxh = torch.randn(n_embd, n_embd + n_embd2) # input to hidden\n",
+    "Whh = torch.randn(n_embd + n_embd2, n_embd2) # hidden to hidden \n",
+    "Why = torch.randn(n_embd2, vocab_size) # hidden to output\n",
+    "bh = torch.zeros(n_embd + n_embd2,) # bias for hidden layer\n",
+    "by = torch.zeros(vocab_size,) # bias for output layer\n",
     "\n",
-    "\t\n",
-    "def sample(h, seed_ix, n):\n",
-    "\tx = torch.zeros((vocab_size, 1))\n",
-    "\tx[seed_ix] = 1\n",
-    "\tixes = []\n",
-    "\tfor i in range(n):\n",
-    "\t\tl1 = torch.dot(W1, x) + torch.dot(W2, h) + b1\n",
-    "\t\tl2 = F.tanh(l1)\n",
-    "\t\ty = torch.dot(W3, l2) + b2\n",
-    "\t\tp = F.softmax(y, dim=0)\n",
-    "\t\tix = torch.multinomial(p, num_samples=1, generator=g)\n",
-    "\t\tx = torch.zeros((vocab_size, 0))\n",
-    "\t\tx[ix] = 1\n",
-    "\t\tixes.append(ix.item())\n",
-    "\treturn ixes\n"
+    "# hidden layer RNN states\n",
+    "states = torch.zeros((1, n_embd))\n",
+    "\n",
+    "params = [C, W1, b1, W2, W3, b3]\n",
+    "for p in params:\n",
+    "\tp.requires_grad = True\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4ced58de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "........ => n\n",
+      ".......n => a\n",
+      "......na => i\n",
+      ".....nai => n\n",
+      "....nain => .\n"
+     ]
+    }
+   ],
+   "source": [
+    "# build_dset basically builds a rolling window on the dataset based on the context length.\n",
+    "def build_dset(dset, ctxt_len):\n",
+    "    X, Y = [], []\n",
+    "    for name in dset:\n",
+    "        context  = [0] * ctxt_len\n",
+    "        for ch in name:\n",
+    "            ix = atoi[ch]\n",
+    "            X.append(context)\n",
+    "            Y.append(ix)\n",
+    "            # print(''.join(itoa[i] for i in context), '--->', itoa[ix])\n",
+    "            context = context[1:] + [ix] # crop and append\n",
+    "    \n",
+    "    X = torch.tensor(X)\n",
+    "    Y = torch.tensor(Y)\n",
+    "    return X, Y\n",
+    "n1 = int(0.8*len(names))\n",
+    "n2 = int(0.9*len(names))\n",
+    "\n",
+    "X_train, Y_train = build_dset(names[:n1], block_size)\n",
+    "X_val, Y_val = build_dset(names[n1:n2], block_size)\n",
+    "X_test, Y_test = build_dset(names[n2:], block_size)\n",
+    "\n",
+    "for c, d in zip(X_train[:5], Y_train[:5]):\n",
+    "    print(''.join(itoa[i.item()] for i in c), \"=>\", itoa[d.item()])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "b3925b6e-4a46-4054-a979-b1b73a3e0c93",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([1, 100]), torch.Size([1000, 8, 150]), torch.Size([1000, 150]))"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def rnn(x, y, hidden):\n",
+    "    hidden = torch.tanh()\n",
+    "    \n",
+    "X= X_train[:1000]\n",
+    "Y = Y_train[:1000]\n",
+    "emb = C[X]\n",
+    "l1 = emb @ W1\n",
+    "l1 += b1\n",
+    "hidden = torch.tanh(l1 + Whh @ hidden.pad(0) + bh)\n",
+    "xh.shape\n",
+    "# l2 = l1 @ W2\n",
+    "# l3 = l2 @ W3\n",
+    "# l3 += b3\n",
+    "# logits = F.softmax(l3, dim=-1)\n",
+    "states_0.shape, l1.shape\n",
+    "# logits.sum(axis=2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 105,
+   "id": "b318ffe4",
    "metadata": {},
    "outputs": [
     {
@@ -159,6 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
+   "id": "5ce9cc63",
    "metadata": {},
    "outputs": [
     {
@@ -284,120 +375,7 @@
      ]
     }
    ],
-   "source": [
-    "\"\"\"\n",
-    "Minimal character-level Vanilla RNN model. Written by Andrej Karpathy (@karpathy)\n",
-    "BSD License\n",
-    "\"\"\"\n",
-    "import numpy as np\n",
-    "\n",
-    "# data I/O\n",
-    "data = open('names.txt', 'r').read() # should be simple plain text file\n",
-    "chars = list(set(data))\n",
-    "data_size, vocab_size = len(data), len(chars)\n",
-    "print('data has %d characters, %d unique.' % (data_size, vocab_size))\n",
-    "char_to_ix = { ch:i for i,ch in enumerate(chars) }\n",
-    "ix_to_char = { i:ch for i,ch in enumerate(chars) }\n",
-    "\n",
-    "# hyperparameters\n",
-    "hidden_size = 100 # size of hidden layer of neurons\n",
-    "seq_length = 25 # number of steps to unroll the RNN for\n",
-    "learning_rate = 1e-1\n",
-    "\n",
-    "# model parameters\n",
-    "Wxh = np.random.randn(hidden_size, vocab_size)*0.01 # input to hidden\n",
-    "Whh = np.random.randn(hidden_size, hidden_size)*0.01 # hidden to hidden\n",
-    "Why = np.random.randn(vocab_size, hidden_size)*0.01 # hidden to output\n",
-    "bh = np.zeros((hidden_size, 1)) # hidden bias\n",
-    "by = np.zeros((vocab_size, 1)) # output bias\n",
-    "\n",
-    "def lossFun(inputs, targets, hprev):\n",
-    "  \"\"\"\n",
-    "  inputs,targets are both list of integers.\n",
-    "  hprev is Hx1 array of initial hidden state\n",
-    "  returns the loss, gradients on model parameters, and last hidden state\n",
-    "  \"\"\"\n",
-    "  xs, hs, ys, ps = {}, {}, {}, {}\n",
-    "  hs[-1] = np.copy(hprev)\n",
-    "  loss = 0\n",
-    "  # forward pass\n",
-    "  for t in range(len(inputs)):\n",
-    "    xs[t] = np.zeros((vocab_size,1)) # encode in 1-of-k representation\n",
-    "    xs[t][inputs[t]] = 1\n",
-    "    hs[t] = np.tanh(np.dot(Wxh, xs[t]) + np.dot(Whh, hs[t-1]) + bh) # hidden state\n",
-    "    ys[t] = np.dot(Why, hs[t]) + by # unnormalized log probabilities for next chars\n",
-    "    ps[t] = np.exp(ys[t]) / np.sum(np.exp(ys[t])) # probabilities for next chars\n",
-    "    loss += -np.log(ps[t][targets[t],0]) # softmax (cross-entropy loss)\n",
-    "  # backward pass: compute gradients going backwards\n",
-    "  dWxh, dWhh, dWhy = np.zeros_like(Wxh), np.zeros_like(Whh), np.zeros_like(Why)\n",
-    "  dbh, dby = np.zeros_like(bh), np.zeros_like(by)\n",
-    "  dhnext = np.zeros_like(hs[0])\n",
-    "  for t in reversed(range(len(inputs))):\n",
-    "    dy = np.copy(ps[t])\n",
-    "    dy[targets[t]] -= 1 # backprop into y. see http://cs231n.github.io/neural-networks-case-study/#grad if confused here\n",
-    "    dWhy += np.dot(dy, hs[t].T)\n",
-    "    dby += dy\n",
-    "    dh = np.dot(Why.T, dy) + dhnext # backprop into h\n",
-    "    dhraw = (1 - hs[t] * hs[t]) * dh # backprop through tanh nonlinearity\n",
-    "    dbh += dhraw\n",
-    "    dWxh += np.dot(dhraw, xs[t].T)\n",
-    "    dWhh += np.dot(dhraw, hs[t-1].T)\n",
-    "    dhnext = np.dot(Whh.T, dhraw)\n",
-    "  for dparam in [dWxh, dWhh, dWhy, dbh, dby]:\n",
-    "    np.clip(dparam, -5, 5, out=dparam) # clip to mitigate exploding gradients\n",
-    "  return loss, dWxh, dWhh, dWhy, dbh, dby, hs[len(inputs)-1]\n",
-    "\n",
-    "def sample(h, seed_ix, n):\n",
-    "  \"\"\" \n",
-    "  sample a sequence of integers from the model \n",
-    "  h is memory state, seed_ix is seed letter for first time step\n",
-    "  \"\"\"\n",
-    "  x = np.zeros((vocab_size, 1))\n",
-    "  x[seed_ix] = 1\n",
-    "  ixes = []\n",
-    "  for t in range(n):\n",
-    "    h = np.tanh(np.dot(Wxh, x) + np.dot(Whh, h) + bh)\n",
-    "    y = np.dot(Why, h) + by\n",
-    "    p = np.exp(y) / np.sum(np.exp(y))\n",
-    "    ix = np.random.choice(range(vocab_size), p=p.ravel())\n",
-    "    x = np.zeros((vocab_size, 1))\n",
-    "    x[ix] = 1\n",
-    "    ixes.append(ix)\n",
-    "  return ixes\n",
-    "\n",
-    "n, p = 0, 0\n",
-    "mWxh, mWhh, mWhy = np.zeros_like(Wxh), np.zeros_like(Whh), np.zeros_like(Why)\n",
-    "mbh, mby = np.zeros_like(bh), np.zeros_like(by) # memory variables for Adagrad\n",
-    "smooth_loss = -np.log(1.0/vocab_size)*seq_length # loss at iteration 0\n",
-    "while True:\n",
-    "  # prepare inputs (we're sweeping from left to right in steps seq_length long)\n",
-    "  if p+seq_length+1 >= len(data) or n == 0: \n",
-    "    hprev = np.zeros((hidden_size,1)) # reset RNN memory\n",
-    "    p = 0 # go from start of data\n",
-    "  inputs = [char_to_ix[ch] for ch in data[p:p+seq_length]]\n",
-    "  targets = [char_to_ix[ch] for ch in data[p+1:p+seq_length+1]]\n",
-    "\n",
-    "  # sample from the model now and then\n",
-    "  if n % 100 == 0:\n",
-    "    sample_ix = sample(hprev, inputs[0], 200)\n",
-    "    txt = ''.join(ix_to_char[ix] for ix in sample_ix)\n",
-    "    print('----\\n %s \\n----' % (txt, ))\n",
-    "\n",
-    "  # forward seq_length characters through the net and fetch gradient\n",
-    "  loss, dWxh, dWhh, dWhy, dbh, dby, hprev = lossFun(inputs, targets, hprev)\n",
-    "  smooth_loss = smooth_loss * 0.999 + loss * 0.001\n",
-    "  if n % 100 == 0: print('iter %d, loss: %f' % (n, smooth_loss)) # print progress\n",
-    "  \n",
-    "  # perform parameter update with Adagrad\n",
-    "  for param, dparam, mem in zip([Wxh, Whh, Why, bh, by], \n",
-    "                                [dWxh, dWhh, dWhy, dbh, dby], \n",
-    "                                [mWxh, mWhh, mWhy, mbh, mby]):\n",
-    "    mem += dparam * dparam\n",
-    "    param += -learning_rate * dparam / np.sqrt(mem + 1e-8) # adagrad update\n",
-    "\n",
-    "  p += seq_length # move data pointer\n",
-    "  n += 1 # iteration counter \n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
